Fix mobile horizontal scrollbar issue

--- a/docs/src/scss/modules/_nav.scss
+++ b/docs/src/scss/modules/_nav.scss
@@ -31,7 +31,6 @@
   &.-el2 {
     .header.-expanded & {
       &:after {
-        transform: translateX(100%);
         opacity: 0;
       }
     }
